--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "case_management_sys",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "/src/index.js",
+  "scripts": {
+    "dev": "nodemon --exec babel-node src/index.js",
+    "build": "babel src --out-dir dist --extensions .js",
+    "start": "nodemon dist/index.js"
+  },
   "author": "linghucong",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "koa": "^2.16.0",
+    "mongoose": "^8.13.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.27.0",
+    "@babel/node": "^7.26.0",
+    "nodemon": "^3.1.9"
+  }
 }
